app/docs/data/docs/reference/3.1/Metadata/ApiProperty/page.mdx
---
type: Attribute
---

# [ApiPlatform\Metadata\ApiProperty](/docs/v3.1/reference/Metadata/ApiProperty)


<table>
    <thead><tr><td>Option</td><td>Types</td><td>Description</td></tr></thead>
    <tbody>
<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#description">description</a>`</td><td>string</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#readable">readable</a>`</td><td>bool</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#writable">writable</a>`</td><td>bool</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#readablelink">readableLink</a>`</td><td>bool</td><td>https://api-platform.com/docs/core/serialization/#force-iri-with-relations-of-the-same-type-parentchilds-relations</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#writablelink">writableLink</a>`</td><td>bool</td><td>https://api-platform.com/docs/core/serialization/#force-iri-with-relations-of-the-same-type-parentchilds-relations</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#required">required</a>`</td><td>bool</td><td>https://api-platform.com/docs/admin/validation/#client-side-validation</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#identifier">identifier</a>`</td><td>bool</td><td>https://api-platform.com/docs/core/identifiers/</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#default">default</a>`</td><td>string</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#example">example</a>`</td><td></td><td>https://api-platform.com/docs/core/openapi/#using-the-openapi-and-swagger-contexts</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#deprecationreason">deprecationReason</a>`</td><td>string</td><td>https://api-platform.com/docs/core/deprecations/#deprecating-resource-classes-operations-and-properties</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#fetchable">fetchable</a>`</td><td>bool</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#fetcheager">fetchEager</a>`</td><td>bool</td><td>https://api-platform.com/docs/core/performance/#eager-loading</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#jsonldcontext">jsonldContext</a>`</td><td>array</td><td>https://api-platform.com/docs/core/extending-jsonld-context/#extending-json-ld-and-hydra-contexts</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#openapicontext">openapiContext</a>`</td><td>array</td><td>https://api-platform.com/docs/core/openapi/#using-the-openapi-and-swagger-contexts</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#jsonschemacontext">jsonSchemaContext</a>`</td><td>array</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#push">push</a>`</td><td>bool</td><td>https://api-platform.com/docs/core/push-relations/</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#security">security</a>`</td><td>string</td><td>https://api-platform.com/docs/core/security</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#securitypostdenormalize">securityPostDenormalize</a>`</td><td>string</td><td>https://api-platform.com/docs/core/security/#executing-access-control-rules-after-denormalization</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#types">types</a>`</td><td>array&lt;int, string&gt;</td><td>the RDF types of this property</td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#builtintypes">builtinTypes</a>`</td><td>array&lt;int, Symfony\Component\PropertyInfo\Type&gt;</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#schema">schema</a>`</td><td>array</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#initializable">initializable</a>`</td><td>bool</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#iris">iris</a>`</td><td>array&lt;int, string&gt;</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#genid">genId</a>`</td><td>bool</td><td></td></tr>

<tr><td>`<a href="/docs/v3.1/reference/Metadata/ApiProperty#extraproperties">extraProperties</a>`</td><td>array</td><td></td></tr>

</tbody></table>


## Description


ApiProperty annotation.



## Options

